--- a/dbinterface/config.json
+++ b/dbinterface/config.json
@@ -4,5 +4,8 @@
         "password": "Sri@sindhu12",
         "host": "localhost",
         "database": "employees_info"
-    }
+    },
+    "IP_CONFIG": {
+            "ip":"192.168.1.124",
+            "port":5000
 }
