--- a/dbinterface/config.json
+++ b/dbinterface/config.json
@@ -1,12 +1,13 @@
 {
     "DATABASE_CONFIG": {
         "user": "root",
-        "password": "Sri@sindhu12",
-        "host": "localhost",
-        "database": "employees_info"
+        "password": "deeksha",
+        "host": "db-1",
+        "port": "3306",
+        "database": "employee"
     },
     "IP_CONFIG": {
-            "ip":"192.168.1.124",
+            "ip":"0.0.0.0",
             "port":5000
     }
 }
